petit avancement avant de manger

--- a/pour-la-posterit.ipynb
+++ b/pour-la-posterit.ipynb
@@ -59,34 +59,18 @@
      "languageId": "ruby"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting cryptography\n",
-      "  Downloading cryptography-44.0.1-cp39-abi3-win_amd64.whl.metadata (5.7 kB)\n",
-      "Requirement already satisfied: cffi>=1.12 in c:\\users\\axel\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from cryptography) (1.16.0)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\axel\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from cffi>=1.12->cryptography) (2.21)\n",
-      "Downloading cryptography-44.0.1-cp39-abi3-win_amd64.whl (3.2 MB)\n",
-      "   ---------------------------------------- 0.0/3.2 MB ? eta -:--:--\n",
-      "   ----------------------------- ---------- 2.4/3.2 MB 13.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 3.2/3.2 MB 14.5 MB/s eta 0:00:00\n",
-      "Installing collected packages: cryptography\n",
-      "Successfully installed cryptography-44.0.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 25.0 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
     }
-   ],
+   },
+   "outputs": [],
    "source": []
   },
   {
@@ -136,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## clé"
+    "## clé : creation de la clé"
    ]
   },
   {
@@ -165,6 +149,112 @@
     "    print(f\"Clé générée et sauvegardée dans {filename_key}\")\n",
     "\n",
     "generate_key_and_save(\"ma_cle.key\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## cryptage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.fernet import Fernet\n",
+    "\n",
+    "def encrypt_file(plain_filename: str, encrypted_filename: str, key_filename: str):\n",
+    "    \"\"\"\n",
+    "    Lit un fichier texte en clair et enregistre le contenu chiffré\n",
+    "    dans un nouveau fichier.\n",
+    "    \"\"\"\n",
+    "    # 1) Chargement de la clé\n",
+    "    with open(key_filename, 'rb') as key_file:\n",
+    "        key = key_file.read()\n",
+    "    fernet = Fernet(key)\n",
+    "\n",
+    "    # 2) Lecture du contenu du fichier texte\n",
+    "    with open(plain_filename, 'rb') as file:\n",
+    "        file_data = file.read()\n",
+    "\n",
+    "    # 3) Chiffrement du contenu\n",
+    "    encrypted_data = fernet.encrypt(file_data)\n",
+    "\n",
+    "    # 4) Écriture du contenu chiffré dans un fichier de sortie\n",
+    "    with open(encrypted_filename, 'wb') as file:\n",
+    "        file.write(encrypted_data)\n",
+    "\n",
+    "    print(f\"Le fichier '{plain_filename}' a été chiffré et enregistré dans '{encrypted_filename}'.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Fernet key must be 32 url-safe base64-encoded bytes.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mencrypt_file\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mma_cle.key\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest_truc_a_crypter.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtruc_crypter.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[19], line 11\u001b[0m, in \u001b[0;36mencrypt_file\u001b[1;34m(plain_filename, encrypted_filename, key_filename)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(key_filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m key_file:\n\u001b[0;32m     10\u001b[0m     key \u001b[38;5;241m=\u001b[39m key_file\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m---> 11\u001b[0m fernet \u001b[38;5;241m=\u001b[39m \u001b[43mFernet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# 2) Lecture du contenu du fichier texte\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(plain_filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "File \u001b[1;32mc:\\Users\\Axel\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cryptography\\fernet.py:40\u001b[0m, in \u001b[0;36mFernet.__init__\u001b[1;34m(self, key, backend)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m     37\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFernet key must be 32 url-safe base64-encoded bytes.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     38\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m32\u001b[39m:\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m     41\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFernet key must be 32 url-safe base64-encoded bytes.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     42\u001b[0m     )\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_signing_key \u001b[38;5;241m=\u001b[39m key[:\u001b[38;5;241m16\u001b[39m]\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_encryption_key \u001b[38;5;241m=\u001b[39m key[\u001b[38;5;241m16\u001b[39m:]\n",
+      "\u001b[1;31mValueError\u001b[0m: Fernet key must be 32 url-safe base64-encoded bytes."
+     ]
+    }
+   ],
+   "source": [
+    "encrypt_file(\"ma_cle.key\",\"test_truc_a_crypter.txt\",\"truc_crypter.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## decryptage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.fernet import Fernet\n",
+    "\n",
+    "def decrypt_file(encrypted_filename: str, decrypted_filename: str, key_filename: str):\n",
+    "    \"\"\"\n",
+    "    Lit un fichier chiffré et enregistre son contenu déchiffré\n",
+    "    dans un nouveau fichier.\n",
+    "    \"\"\"\n",
+    "    # 1) Chargement de la clé\n",
+    "    with open(key_filename, 'rb') as key_file:\n",
+    "        key = key_file.read()\n",
+    "    fernet = Fernet(key)\n",
+    "\n",
+    "    # 2) Lecture du contenu chiffré\n",
+    "    with open(encrypted_filename, 'rb') as file:\n",
+    "        encrypted_data = file.read()\n",
+    "\n",
+    "    # 3) Déchiffrement\n",
+    "    decrypted_data = fernet.decrypt(encrypted_data)\n",
+    "\n",
+    "    # 4) Écriture dans un fichier texte\n",
+    "    with open(decrypted_filename, 'wb') as file:\n",
+    "        file.write(decrypted_data)\n",
+    "\n",
+    "    print(f\"Le fichier chiffré '{encrypted_filename}' a été déchiffré en '{decrypted_filename}'.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    decrypt_file(\"mon_texte.txt.enc\", \"mon_texte_dechiffre.txt\", \"ma_cle.key\")\n"
    ]
   }
  ],
