--- a/pour-la-posterit.ipynb
+++ b/pour-la-posterit.ipynb
@@ -52,6 +52,11 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -159,60 +164,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### exemple"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cryptography.fernet import Fernet\n",
     "\n",
-    "def encrypt_file(plain_filename: str, encrypted_filename: str, key_filename: str):\n",
-    "    \"\"\"\n",
-    "    Lit un fichier texte en clair et enregistre le contenu chiffré\n",
-    "    dans un nouveau fichier.\n",
-    "    \"\"\"\n",
-    "    # 1) Chargement de la clé\n",
-    "    with open(key_filename, 'rb') as key_file:\n",
-    "        key = key_file.read()\n",
+    "key = Fernet.generate_key()\n",
+    "print(key)\n",
+    "\n",
+    "f = Fernet(key)\n",
+    "\n",
+    "token = f.encrypt(b\"my deep dark secret\")\n",
+    "\n",
+    "token\n",
+    "b'...'\n",
+    "\n",
+    "f.decrypt(token)\n",
+    "b'my deep dark secret'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### mon code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'Bonjour'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'ceci est un test de text a crypter'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.fernet import Fernet\n",
+    "\n",
+    "def create_key():\n",
+    "    key = Fernet.generate_key()\n",
+    "    with open(\"ma_cle.key\", \"wb\") as key_file:\n",
+    "        key_file.write(key)\n",
+    "\n",
+    "def load_key():\n",
+    "    return open(\"ma_cle.key\", \"rb\").read()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def encrypt_file(file_name):\n",
+    "    key = load_key()\n",
     "    fernet = Fernet(key)\n",
-    "\n",
-    "    # 2) Lecture du contenu du fichier texte\n",
-    "    with open(plain_filename, 'rb') as file:\n",
+    "    with open(file_name, \"rb\") as file:\n",
     "        file_data = file.read()\n",
-    "\n",
-    "    # 3) Chiffrement du contenu\n",
     "    encrypted_data = fernet.encrypt(file_data)\n",
-    "\n",
-    "    # 4) Écriture du contenu chiffré dans un fichier de sortie\n",
-    "    with open(encrypted_filename, 'wb') as file:\n",
+    "    with open(file_name[:-4]+str(\"encrypted.txt\"), \"wb\") as file:\n",
     "        file.write(encrypted_data)\n",
-    "\n",
-    "    print(f\"Le fichier '{plain_filename}' a été chiffré et enregistré dans '{encrypted_filename}'.\")\n",
+    "        \n",
+    "        \n",
+    "def decrypt_file(file_name):\n",
+    "    key = load_key()\n",
+    "    fernet = Fernet(key)\n",
+    "    with open(file_name, \"rb\") as file:\n",
+    "        encrypted_data = file.read()\n",
+    "    decrypted_data = fernet.decrypt(encrypted_data)\n",
+    "    with open(file_name[:-4]+str(\"_decrypted.txt\"), \"wb\") as file:\n",
+    "        file.write(decrypted_data)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Fernet key must be 32 url-safe base64-encoded bytes.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mencrypt_file\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mma_cle.key\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest_truc_a_crypter.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtruc_crypter.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[19], line 11\u001b[0m, in \u001b[0;36mencrypt_file\u001b[1;34m(plain_filename, encrypted_filename, key_filename)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(key_filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m key_file:\n\u001b[0;32m     10\u001b[0m     key \u001b[38;5;241m=\u001b[39m key_file\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m---> 11\u001b[0m fernet \u001b[38;5;241m=\u001b[39m \u001b[43mFernet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# 2) Lecture du contenu du fichier texte\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(plain_filename, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
-      "File \u001b[1;32mc:\\Users\\Axel\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cryptography\\fernet.py:40\u001b[0m, in \u001b[0;36mFernet.__init__\u001b[1;34m(self, key, backend)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m     37\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFernet key must be 32 url-safe base64-encoded bytes.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     38\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m32\u001b[39m:\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m     41\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFernet key must be 32 url-safe base64-encoded bytes.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     42\u001b[0m     )\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_signing_key \u001b[38;5;241m=\u001b[39m key[:\u001b[38;5;241m16\u001b[39m]\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_encryption_key \u001b[38;5;241m=\u001b[39m key[\u001b[38;5;241m16\u001b[39m:]\n",
-      "\u001b[1;31mValueError\u001b[0m: Fernet key must be 32 url-safe base64-encoded bytes."
-     ]
+     "data": {
+      "text/plain": [
+       "'sdfsddsfsdf'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "encrypt_file(\"ma_cle.key\",\"test_truc_a_crypter.txt\",\"truc_crypter.txt\")"
+    "load_key()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = Fernet(load_key())\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k=f.encrypt(b\"Bonjour\")\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.decrypt(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'my deep dark secret'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encrypt_file(\"test_truc_a_crypter.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.decrypt(\"gAAAAABnwijyeICCKm9FAMWKR3ETKZ8ki-u9SgBWU8e0UwkY_adfN6F1IKDpXYVVUZQThl79itoABpgS0DP_5hVZ9kAw_HSE5YQizzBsvDMNRkaXBzGzF1erS-kxtKsz0RDgE8zhE2IG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decrypt_file(\"test_truc_a_crypterencrypted.txt\")"
    ]
   },
   {
@@ -227,35 +412,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from cryptography.fernet import Fernet\n",
-    "\n",
-    "def decrypt_file(encrypted_filename: str, decrypted_filename: str, key_filename: str):\n",
-    "    \"\"\"\n",
-    "    Lit un fichier chiffré et enregistre son contenu déchiffré\n",
-    "    dans un nouveau fichier.\n",
-    "    \"\"\"\n",
-    "    # 1) Chargement de la clé\n",
-    "    with open(key_filename, 'rb') as key_file:\n",
-    "        key = key_file.read()\n",
-    "    fernet = Fernet(key)\n",
-    "\n",
-    "    # 2) Lecture du contenu chiffré\n",
-    "    with open(encrypted_filename, 'rb') as file:\n",
-    "        encrypted_data = file.read()\n",
-    "\n",
-    "    # 3) Déchiffrement\n",
-    "    decrypted_data = fernet.decrypt(encrypted_data)\n",
-    "\n",
-    "    # 4) Écriture dans un fichier texte\n",
-    "    with open(decrypted_filename, 'wb') as file:\n",
-    "        file.write(decrypted_data)\n",
-    "\n",
-    "    print(f\"Le fichier chiffré '{encrypted_filename}' a été déchiffré en '{decrypted_filename}'.\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    decrypt_file(\"mon_texte.txt.enc\", \"mon_texte_dechiffre.txt\", \"ma_cle.key\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
