debut mail auto deferent

--- a/pour-la-posterit.ipynb
+++ b/pour-la-posterit.ipynb
@@ -80,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "destinataire = \"link12541254@gmail.com\"\n",
-    "sujet = \"Test\"\n",
+    "sujet = \"Projet - Pour la poste\"\n",
     "message = \"Ceci est un test 2\"\n",
     "\n",
     "def envoie_email(destinataire,sujet, message):\n",
@@ -113,6 +113,51 @@
    "source": [
     "envoie_email(\"tudoracheiris2828@yahoo.com\",sujet, message)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## mail normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "message = \"Ceci est un test 2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## mail clé"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## mail choisi clone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -404,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## decryptage"
+    "## recuperation des emails"
    ]
   },
   {
@@ -413,6 +458,110 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "my_csv_file_name = \"Formulaire sans titre (réponses) - Réponses au formulaire 1.csv\"\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv(my_csv_file_name)\n",
+    "\n",
+    "# Convert the dataframe to a list of lists\n",
+    "data_list = df.values.tolist()\n",
+    "\n",
+    "def get_email_list(data_list):\n",
+    "    email_list = []\n",
+    "    for i in range(len(data_list)):\n",
+    "        email_list.append(data_list[i][3])\n",
+    "    return email_list\n",
+    "\n",
+    "email_list=get_email_list(data_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_chosen_emails(email_list, the_chosen):\n",
+    "    for element in the_chosen:\n",
+    "        email_list.remove(element)\n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['grosse_teub@hboutin.ch',\n",
+       " 'giangifolino@gmail.com',\n",
+       " 'thomas.moreau.ts@gmail.com']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "NB_choisi_pour_clé = 3\n",
+    "NB_choisi_pour_clone=1\n",
+    "\n",
+    "\n",
+    "\n",
+    "the_chosen=random.sample(email_list,NB_choisi_pour_clé+NB_choisi_pour_clone)\n",
+    "the_chosen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_chosen_emails(email_list, the_chosen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bast.lacave@gmail.com',\n",
+       " 'axel1254@gmail.com',\n",
+       " 'mail@ferrer.re',\n",
+       " 'kenji@tanaka.ninja',\n",
+       " 'Cecemarques@icloud.com',\n",
+       " 'clone.pushover928@passmail.net',\n",
+       " 'Dimitry.deruaz@gmail.com',\n",
+       " 'aurelien.balzli@gmail.com',\n",
+       " 'drinimarchese@gmail.com']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "email_list"
+   ]
   }
  ],
  "metadata": {
