--- a/pour-la-posterit.ipynb
+++ b/pour-la-posterit.ipynb
@@ -57,14 +57,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "ruby"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -80,7 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from email.message import EmailMessage # for creating email\n",
+    "import smtplib # for sending email\n",
+    "import ssl # for secure connection\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +112,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "envoie_email(\"tudoracheiris2828@yahoo.com\",sujet, message)"
+    "envoie_email(destinataire,sujet, message)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "envoie_email(\"axel.grand@etu.unige.ch\",sujet, message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,7 +176,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ff"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,9 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'i6eh6w7aFAnXy8OU_mshTQWXiWYMzXZQooT8aCED7m4='\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b'my deep dark secret'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from cryptography.fernet import Fernet\n",
     "\n",
@@ -269,18 +315,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'Bonjour'"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -294,18 +329,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'ceci est un test de text a crypter'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -317,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,27 +512,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_chosen_emails(email_list, the_chosen):\n",
-    "    for element in the_chosen:\n",
-    "        email_list.remove(element)\n",
-    "        \n",
+    "\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['grosse_teub@hboutin.ch',\n",
-       " 'giangifolino@gmail.com',\n",
-       " 'thomas.moreau.ts@gmail.com']"
+       "['kenji@tanaka.ninja',\n",
+       " 'bast.lacave@gmail.com',\n",
+       " 'Cecemarques@icloud.com',\n",
+       " 'drinimarchese@gmail.com',\n",
+       " 'giangifolino@gmail.com']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,9 +541,9 @@
     "\n",
     "\n",
     "NB_choisi_pour_clé = 3\n",
-    "NB_choisi_pour_clone=1\n",
+    "NB_choisi_pour_clone=2\n",
     "\n",
-    "\n",
+    "email_list=get_email_list(data_list)\n",
     "\n",
     "the_chosen=random.sample(email_list,NB_choisi_pour_clé+NB_choisi_pour_clone)\n",
     "the_chosen"
@@ -528,11 +551,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clone: bast.lacave@gmail.com\n",
+      "normal: axel1254@gmail.com\n",
+      "normal: mail@ferrer.re\n",
+      "clone: kenji@tanaka.ninja\n",
+      "clé: giangifolino@gmail.com\n",
+      "normal: grosse_teub@hboutin.ch\n",
+      "clé: Cecemarques@icloud.com\n",
+      "normal: clone.pushover928@passmail.net\n",
+      "normal: thomas.moreau.ts@gmail.com\n",
+      "normal: Dimitry.deruaz@gmail.com\n",
+      "normal: aurelien.balzli@gmail.com\n",
+      "clé: drinimarchese@gmail.com\n"
+     ]
+    }
+   ],
    "source": [
-    "remove_chosen_emails(email_list, the_chosen)"
+    "t=0\n",
+    "for email_adresse in email_list:\n",
+    "    if email_adresse in the_chosen:\n",
+    "        if t<NB_choisi_pour_clone:\n",
+    "            #envoie email clone\n",
+    "            print(\"clone: \"+str(email_adresse))\n",
+    "            t=t+1\n",
+    "        else:\n",
+    "            #envoie email clé\n",
+    "            print(\"clé: \"+str(email_adresse))\n",
+    "    else:\n",
+    "        #envoie email normal\n",
+    "        print(\"normal: \"+str(email_adresse))"
    ]
   },
   {
@@ -562,6 +616,35 @@
    "source": [
     "email_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=[0,1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 in t"
+   ]
   }
  ],
  "metadata": {
@@ -580,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
