--- a/pour-la-posterit.ipynb
+++ b/pour-la-posterit.ipynb
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1138,8 +1138,8 @@
     }
    ],
    "source": [
-    "###\n",
-    "Final_execution=True # doit être mis a True pour envoyer les emails et SUPPRIMER LE FICHIER CONTENANT LA CLE\n",
+    "### A ACTIVé QUE SI TU SAIS CE QUE TU FAIS\n",
+    "Final_execution=False # doit être mis a True pour envoyer les emails et SUPPRIMER LE FICHIER CONTENANT LA CLE\n",
     "send=False # doit être mis a True pour envoyer les emails\n",
     "###\n",
     "\n",
